fixed some overflow

--- a/public/css/what_i_do.css
+++ b/public/css/what_i_do.css
@@ -23,7 +23,7 @@
 .what-i-do-text{
     margin-top: 2rem;
 
-    font-size: 7rem;
+    font-size: 6.7rem;
     line-height: 6rem;
     /* margin-inline: 11rem; */
     
